[tool.poetry]
name = "makey"
version = "0.0.8"
description = "Make libraries from GIT/url/tarball with CMAKE, and install using checkinstall."
license = "MIT"
authors = ["Angus Hollands <goosey15@gmail.com>"]

[tool.poetry.scripts]
makey = "makey.__main__:main"

[tool.poetry.dependencies]
python = "^3.7"
plumbum = "^1.6.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
